enhance: replace missing colors with css variables. fix #6319 (#6320)
* enhance: replace missing colors with css variables. fix #6319

* enhance: replace black color with css variable

* chore: update tag snapshots for css var

--- a/src/components/error-block/error-block.less
+++ b/src/components/error-block/error-block.less
@@ -26,7 +26,7 @@
 
   &-description {
     font-size: var(--adm-font-size-4);
-    color: #999;
+    color: var(--adm-color-weak);
     line-height: 1.4;
     margin-top: 12px;
     &-title {
